# fastapi-ratelimiter

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  readthedocs.yml
.github/workflows/: publish_pypi.yml
docs/: cookbook.md  index.md  rates.md
docs/assets/code/: grouped.py  middleware.py  quick_start.py
examples/: grouped.py  plain.py
fastapi_ratelimit/: depends.py  middlewares.py  strategies.py  types.py
fastapi_ratelimiter/: __init__.py  config.py  depends.py  middlewares.py  strategies.py  types.py  utils.py
