[tool.poetry]
name = "fastapi-ratelimit"
version = "0.0.1"
description = "Redis-based rate-limiting for FastAPI"
authors = ["GLEF1X"]
keywords = ["python", "fastapi", "asgi", "asyncio", "aiohttp", "ratelimit", "redis"]
readme = "README.md"
homepage = "https://github.com/GLEF1X/fastapi-ratelimit"
repository = "https://github.com/GLEF1X/fastapi-ratelimit"
packages = [
    { include = "./fastapi_ratelimit" }
]
maintainers = [
    "GLEF1X <glebgar567@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.73.0"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
uvicorn = "^0.17.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
